# softenable-ui

./: MANIFEST.in  app.js  index.html  package-lock.json  package.xml  post_test.py  setup.cfg  setup.py
launch/: display_server.py
resource/: softenable_display
softenable_display/: package.xml  setup.py
softenable_display/configs/: general.yaml  protocol.yaml  study2026.yaml  unfolding.yaml  unstack.yaml
softenable_display/launch/: display_server.launch.py
softenable_display/resource/: main_window.ui
softenable_display/softenable_display/: change_display.py  display_service_node.py  gui.py  server_runner.py  tts_service.py
softenable_display/web/: app.js  index.html  more_style.css  server.js
softenable_display_msgs/: CMakeLists.txt  package.xml
softenable_display_msgs/srv/: SetDisplay.srv
web/: output.css  server.js
