<?xml version="1.0"?>
<package format="3">
  <name>softenable_display</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper to run the Node SSE display server.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>softenable_display_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
